[package]
name = "text_expander"
version = "0.1.0"
edition = "2021"
description = "Minimal Wayland text expander compatible with espanso config format"

[dependencies]
evdev = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
libc = "0.2"

[profile.release]
lto = true
strip = true
